# Rond-API

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: privacy-guard.yml
docs/: schema.md
src/rond_api/: __init__.py  cli.py  config.py  db.py
src/rond_api/db/: __init__.py  sqlite_client.py
src/rond_api/domain/: __init__.py  timeline_types.py
src/rond_api/formatters/: __init__.py  timeline_json.py  timeline_pretty.py
src/rond_api/repositories/: __init__.py  timeline_repository.py
src/rond_api/services/: __init__.py  timeline_service.py
tests/: test_cli.py  test_privacy_guard.py  test_sqlite_client.py  test_timeline_pretty.py  test_timeline_service.py
