[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rond-api"
version = "0.1.0"
description = "API utilities for accessing a macOS app container database."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = ["sqlalchemy>=2.0", "aiosqlite>=0.20", "python-dotenv>=1.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
